--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
+    <meta name="google-site-verification" content="CnHP09U7A3XH-dJJSxGr5rx1SQpmiYThyq0eh7fUShI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="چطور با دیدن تبلیغات درآمد کسب کنیم">
