--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 </head>
 <body>
     <div class="myket-btn">
-        <a href="https://myket.ir/app/com.app.myapp.tNZCgatXex?utm_source=search-ads-gift&utm_medium=cpc" target="_blank">
-            <img src="https://myket.ir/core/images/logo/get1-fa.png" alt="دریافت از مایکت">
+        <a href="https://myket.ir/app/com.app.myapp.xpwXGxHVMn?utm_source=search-ads-gift&utm_medium=cpc">
+            <img src="https://myket.ir/core/images/logo/get1-fa.png" />
         </a>
     </div>
 <header>
