--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 </head>
 <body>
     <div class="myket-btn">
-        <a href="https://myket.ir/app/com.app.myapp.xpwXGxHVMn?utm_source=search-ads-gift&utm_medium=cpc">
-            <img src="https://myket.ir/core/images/logo/get1-fa.png" />
-        </a>
+        <a href="https://myket.ir/app/com.app.myapp.xpwXGxHVMn?utm_source=search-ads-gift&utm_medium=cpc"><img src="https://myket.ir/core/images/logo/get1-fa.png" /> </a>
     </div>
 <header>
     کسب درآمد از تبلیغات آنلاین
